@@ -340,7 +340,7 @@ enum SQLServerDriverIntProperty {
 
 enum SQLServerDriverBooleanProperty 
 {
-    DISABLE_STATEMENT_POOLING                 ("disableStatementPooling",                   false),
+    DISABLE_STATEMENT_POOLING                 ("disableStatementPooling",                   true),
     ENCRYPT                                   ("encrypt",                                   false), 
     INTEGRATED_SECURITY                       ("integratedSecurity",                        false),
     LAST_UPDATE_COUNT                         ("lastUpdateCount",                           true),
@@ -474,7 +474,9 @@ public final class SQLServerDriver implements java.sql.Driver {
             java.sql.DriverManager.registerDriver(new SQLServerDriver());
         }
         catch (SQLException e) {
-            e.printStackTrace();
+            if (drLogger.isLoggable(Level.FINER) && Util.IsActivityTraceOn()) {
+                drLogger.finer("Error registering driver: " + e);
+            }
         }
     }
 
@@ -612,7 +614,12 @@ public final class SQLServerDriver implements java.sql.Driver {
         // Merge connectProperties (from URL) and supplied properties from user.
         Properties connectProperties = parseAndMergeProperties(Url, suppliedProperties);
         if (connectProperties != null) {
-            result = new SQLServerConnection(toString());
+            if (Util.use43Wrapper()) {
+                result = new SQLServerConnection43(toString());
+            }
+            else {
+                result = new SQLServerConnection(toString());
+            }
             result.connect(connectProperties, null);
         }
         loggerExternal.exiting(getClassNameLogging(), "connect", result);
@@ -632,7 +639,7 @@ public final class SQLServerDriver implements java.sql.Driver {
         // put the user properties into the connect properties
         int nTimeout = DriverManager.getLoginTimeout();
         if (nTimeout > 0) {
-            connectProperties.put(SQLServerDriverIntProperty.LOGIN_TIMEOUT.toString(), new Integer(nTimeout).toString());
+            connectProperties.put(SQLServerDriverIntProperty.LOGIN_TIMEOUT.toString(), Integer.valueOf(nTimeout).toString());
         }
 
         // Merge connectProperties (from URL) and supplied properties from user.
